--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Home</title>
@@ -2369,4 +2368,3 @@
     </div>
   </body>
 </html>
-
