update redirect script

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         if ((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i))) {
             location.replace("http://cleanuxd/cleanuxd_-__mobile_site.html");
         }else if (screen.width <= 768) {
-            document.location = "cleanuxd_-__mobile_site.html";
+            document.location = "http://cleanuxd/cleanuxd_-__mobile_site.html";
         }
     </script>
 </head>
