update redirect script

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
     </script>
     <script>
         if ((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i))) {
-            location.replace("http://cleanuxd/cleanuxd_-__mobile_site.html");
+            location.replace("http://cleanuxd.com/cleanuxd_-__mobile_site.html");
         }else if (screen.width <= 768) {
-            document.location = "http://cleanuxd/cleanuxd_-__mobile_site.html";
+            document.location = "http://cleanuxd.com/cleanuxd_-__mobile_site.html";
         }
     </script>
 </head>
