--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </script>
     <script>
         if ((navigator.userAgent.match(/iPhone/i)) || (navigator.userAgent.match(/iPod/i))) {
-            location.replace("http://cleanuxd.com/cleanuxd_-__mobile_site.html");
+            location.replace("http://192.168.1.6:8080/cleanuxd_-__mobile_site.html");
         }else if (screen.width <= 768) {
             document.location = "http://cleanuxd.com/cleanuxd_-__mobile_site.html";
         }
