--- a/cleanuxd_-__about_me.html
+++ b/cleanuxd_-__about_me.html
@@ -425,6 +425,8 @@
       <div id="u609" class="ax_default image">
           <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="tienuxstrategist"><a class="LI-simple-link" href='https://vn.linkedin.com/in/tienuxstrategist?trk=profile-badge'>Tien N.</a></div>
       </div>
+
+      <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     </div>
   </body>
 </html>
