--- a/cleanuxd_-__booking.html
+++ b/cleanuxd_-__booking.html
@@ -1048,7 +1048,7 @@
         <div id="u1089_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u1090" class="text" style="visibility: visible;">
-          <p><span>Booked ((but I'm available to send Design Proposals) </span></p>
+          <p><span>Booked (but I'm available to send Design Proposals) </span></p>
         </div>
       </div>
 
