--- a/cleanuxd_-__about_me.html
+++ b/cleanuxd_-__about_me.html
@@ -11,7 +11,6 @@
     <link href="files/cleanuxd_-__about_me/styles.css" type="text/css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto" type="text/css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Barlow" type="text/css" rel="stylesheet"/>
-    <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">     <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">     <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">     <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png">     <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png">     <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png">     <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png">     <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png">     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png">     <link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-icon-192x192.png">     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">     <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">     <link rel="manifest" href="images/favicon/manifest.json">     <meta name="msapplication-TileColor" content="#ffffff">     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">     <meta name="theme-color" content="#ffffff">
     <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
@@ -27,6 +26,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
     <link rel="manifest" href="images/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <script src="resources/scripts/jquery-1.7.1.min.js"></script>
     <script src="resources/scripts/jquery-ui-1.8.10.custom.min.js"></script>
     <script src="resources/scripts/axure/axQuery.js"></script>
