--- a/cleanuxd_-__about_me.html
+++ b/cleanuxd_-__about_me.html
@@ -436,7 +436,9 @@
 
       <!-- Unnamed (Image) -->
       <div id="u579" class="ax_default image">
-        <img id="u579_img" class="img " src="images/cleanuxd_-__about_me/u579.png"/>
+        <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="tienuxstrategist"><a class="LI-simple-link" href='https://vn.linkedin.com/in/tienuxstrategist?trk=profile-badge'>Tien N.</a></div>
+        <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+
         <!-- Unnamed () -->
         <div id="u580" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
